tests/baselines/reference/genericTypeReferenceWithoutTypeArgument.errors.txt
==== tests/cases/compiler/genericTypeReferenceWithoutTypeArgument.ts (24 errors) ====
    // it is an error to use a generic type without type arguments
    // all of these are errors 
    
    class C<T> {
        foo: T;
    }
    
    var c: C;
           ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var a: { x: C };
                ~
!!! error TS2173: Generic type references must include all type arguments.
    var b: { (x: C): C };
                 ~
!!! error TS2173: Generic type references must include all type arguments.
                     ~
!!! error TS2173: Generic type references must include all type arguments.
    var d: { [x: C]: C };
              ~~~~
!!! error TS1023: Index signature parameter type must be 'string' or 'number'.
                 ~
!!! error TS2173: Generic type references must include all type arguments.
                     ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var e = (x: C) => { var y: C; return y; }
                ~
!!! error TS2173: Generic type references must include all type arguments.
                               ~
!!! error TS2173: Generic type references must include all type arguments.
    
    function f(x: C): C { var y: C; return y; }
                  ~
!!! error TS2173: Generic type references must include all type arguments.
                      ~
!!! error TS2173: Generic type references must include all type arguments.
                                 ~
!!! error TS2173: Generic type references must include all type arguments.
    
    var g = function f(x: C): C { var y: C; return y; }
                          ~
!!! error TS2173: Generic type references must include all type arguments.
                              ~
!!! error TS2173: Generic type references must include all type arguments.
                                         ~
!!! error TS2173: Generic type references must include all type arguments.
    
    class D extends C {
                    ~
!!! error TS2173: Generic type references must include all type arguments.
    }
    
    interface I extends C {}
                        ~
!!! error TS2173: Generic type references must include all type arguments.
    
    module M {
        export class E<T> { foo: T }
    }
    
    class D2 extends M.E { }
                     ~~~
!!! error TS2173: Generic type references must include all type arguments.
    class D3<T extends M.E> { }
                       ~~~
!!! error TS2173: Generic type references must include all type arguments.
    interface I2 extends M.E { }
                         ~~~
!!! error TS2173: Generic type references must include all type arguments.
    
    function h<T extends C>(x: T) { }
                         ~
!!! error TS2173: Generic type references must include all type arguments.
    function i<T extends M.E>(x: T) { }
                         ~~~
!!! error TS2173: Generic type references must include all type arguments.
    
    var j = <C>null;
             ~
!!! error TS2173: Generic type references must include all type arguments.
    var k = <M.E>null;
             ~~~
!!! error TS2173: Generic type references must include all type arguments.